--- a/package.json
+++ b/package.json
@@ -16,7 +16,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/react": "~18.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-babel-module": "^5.3.2",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "^2.8.8",
     "typescript": "^4.9.4"
   },
   "private": true
